<resources>
    <string name="app_name">MyPOS Resto</string>
    <string name="quit">Exit Kasir</string>
    <string name="really_quit">Realy Quit ?</string>
    <string name="yes">Yes</string>
    <string name="help">
        Transaction: \n - Create new sales transaction \n\n
        Master : \n - For setting item master, price, customer, etc. \n\n
        Setting: \n - Seting hardware printer, bluetooth, connection. \n\n
        Help : \n - This page. \n\n
        Exit : \n - End application \n\n
    </string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="menu_utama_transaction">Transaction</string>
    <string name="menu_utama_reports">Reports</string>
    <string name="menu_utama_master">Master</string>
    <string name="menu_utama_setting">Setting</string>
    <string name="menu_utama_help">Help</string>
    <string name="menu_utama_exit">Exit</string>

    <string name="mnu_tran_new_order">New Order</string>
    <string name="mnu_tran_order_open">Pending Order</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_test3">test3</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tes3">tes3</string>
    <string name="action_register">Register</string>
    <string name="login_text">Enter your valid username and password here</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_saya">ca-app-pub-1869511402643723/5718537494</string>
    <string name="banner_ad_unit_id_tes">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_kasir">ca-app-pub-1869511402643723/5784086295</string>
    <string name="setting">setting_kasir</string>
    <string name="file_gambar">File gambar</string>
    <string name="supplier">Supplier</string>
    <string name="item_master">Item Master</string>
    <string name="enter_new_or_edit_item_definition">Enter New Or Edit Item Definition</string>
    <string name="nama_barang">Nama barang</string>
    <string name="delete">Delete</string>
    <string name="kelompok_barang">Kelompok barang</string>
    <string name="harga_beli">Harga beli</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="unit_satuan">Unit satuan</string>
    <string name="harga_jual">Harga jual</string>
    <string name="kode_barang">Kode barang</string>
    <string name="barcode">barcode</string>
    <string name="rp_1_000">Rp. 1.000</string>
    <string name="submit">Submit</string>


</resources>
