<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="67dp"
            android:layout_height="56dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/stat_notify_more" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_master"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_or_edit_item_definition"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kode_barang"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_barang"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNamaBarangPanjang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nama Barang Panjang /Description"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtSales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_jual"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtPurchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_beli"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unit_satuan"
                    android:inputType="" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Category" />

                <Spinner
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView81"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Supplier" />

                <Spinner
                    android:id="@+id/txtSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/file_gambar"
                    android:inputType=""
                    android:visibility="invisible" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/nopic" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cmdDelete"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="visible" />

        <Button
            android:id="@+id/cmdClose"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <Button
            android:id="@+id/cmdSave"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>