<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    android:minWidth="10dp"
                    android:minHeight="43dp"
                    app:srcCompat="@drawable/nopic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/nama_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_barang"
                        android:textColor="@color/light_blue"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/barcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/barcode" />

                        <TextView
                            android:id="@+id/harga"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rp_1_000" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


</LinearLayout>
