<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode"
                android:textAlignment="center"
                tools:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:background="#2FAAACB6"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="206dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    android:minWidth="10dp"
                    android:minHeight="43dp"
                    app:srcCompat="@drawable/nopic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="bottom|end"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/nama_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_barang"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="bottom|end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center"
                        android:text="@string/rp_1_000"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnBuy"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#3F51B5"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="Buy"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
