<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ads:contentScrim="?attr/colorPrimary"
            ads:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            ads:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            ads:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="centerCrop"
                android:src="@drawable/img2" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:background="@drawable/back"
        ads:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|fill"
            android:orientation="vertical"
            android:scrollIndicators="start|end"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNewOrder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#3F51B5"
                    android:drawableTop="@android:drawable/ic_dialog_email"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|fill"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="New Order"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnPendingOrder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_rowSpan="6"
                    android:layout_column="1"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:drawableTop="@android:drawable/ic_media_pause"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|fill"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Pending Order"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnReports"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="9"
                    android:layout_column="1"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#673AB7"
                    android:drawableTop="@android:drawable/ic_menu_gallery"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="@string/menu_utama_reports"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#009688"
                    android:drawableTop="@android:drawable/ic_menu_rotate"
                    android:drawableTintMode="src_over"
                    android:elegantTextHeight="false"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Tables"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnWaiters"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#8BC34A"
                    android:drawableTop="@android:drawable/ic_menu_myplaces"
                    android:drawableTintMode="src_over"
                    android:elegantTextHeight="false"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Waiters"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#2196F3"
                    android:drawableTop="@android:drawable/ic_menu_my_calendar"
                    android:drawableTintMode="src_over"
                    android:elegantTextHeight="false"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Customers"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHelp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary_dark"
                    android:clickable="false"
                    android:drawableTop="@android:drawable/ic_menu_help"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="@string/menu_utama_help"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary_dark"
                    android:drawableTop="@android:drawable/ic_menu_my_calendar"
                    android:drawableTintMode="src_over"
                    android:elegantTextHeight="false"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Category"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnItemMaster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_rowSpan="6"
                    android:layout_column="1"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary_dark"
                    android:drawableTop="@android:drawable/ic_menu_crop"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center|fill"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Item Master"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSetting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"
                    android:drawableTop="@android:drawable/ic_menu_preferences"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="@string/menu_utama_setting"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@android:drawable/ic_menu_mapmode"
                    android:elegantTextHeight="false"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="Suppliers"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="#F0568A"
                    android:drawableTop="@android:drawable/ic_delete"
                    android:ellipsize="middle"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="20dp"
                    android:singleLine="false"
                    android:text="@string/menu_utama_exit"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>